# Player_Universe_Load

./: .gitignore  CLAUDE.md  QUICK_START.md  README.md  pyproject.toml  run_mypy.sh  setup.py
.github/workflows/: neon-smoke.yml  unit-tests.yml
docs/: postgres_schema_design.md
player_universe_load/: README.md  __init__.py  __main__.py  cli.py  db.py  postgres_loader.py  verification.py
player_universe_load/exporters/: __init__.py  parquet.py  r2.py
player_universe_load/loaders/: __init__.py  leagues.py  matchups.py  players.py  position_summary.py  teams.py
player_universe_load/schemas/: 01_players.sql  02_leagues.sql  03_league_scoring_categories.sql  04_teams.sql  05_matchups.sql  06_roster_slots.sql  07_player_stats_batting.sql  08_player_stats_pitching.sql  09_player_projections.sql  10_player_valuations.sql  11_player_valuation_details.sql  12_player_fantasy_assignments.sql  13_parquet_artifacts.sql  14_position_summary.sql  15_matchup_categories.sql
player_universe_load/validation/: __init__.py  schema_validator.py
scripts/: __init__.py  __main__.py  check_schema.py  clean_and_load.py  config.py  create_database.py  detailed_connection_test.py  export_and_upload.sh  mypy.ini  neon_smoke.py  run.py  secrets.py.template  test_connection.py  upload_players.py  verify_table.py
tests/: conftest.py  test_load_integration.py  test_parquet_export.py  test_r2_upload.py  test_unit.py
tests/fixtures/: league_10998_schedule.json  league_10998_summary.json  team_17_roster.json  team_18_roster.json  team_1_roster.json  team_31_roster.json  team_35_roster.json  team_36_roster.json  team_7_roster.json  (+5 more)
