[project]
name = "player-universe-load"
version = "0.2.0"
description = "This loads a local transformed Player Universe (combined ESPN + Fangraphs) from json and uploads it as a hosted postgres database."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "psycopg2-binary>=2.9.10",
    "pyarrow>=18.0.0",
    "pydantic>=2.11.4",
    "python-dotenv>=1.2.2",
]

[project.scripts]
player-universe-load = "player_universe_load.cli:main"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "types-psycopg2>=2.9.21.20250318",
    "pytest>=8.3.4",
    "pytest-cov>=7.1.0",
]

[tool.uv]
package = true
